force-app/main/default/objects/Remediation__c/Remediation__c.object-meta.xml
<CustomObject>
    <description>Action taken against a Deviation Finding plus its approval trail. Master-detail child of Deviation_Finding__c (sharing controlled by parent).</description>
    <label>Remediation</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Remediation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remediations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>