force-app/main/default/objects/Remediation__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>The remediation action to perform for this finding.</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rollback_Version</fullName>
                <label>Rollback Version</label>
            </value>
            <value>
                <fullName>Quarantine</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
            <value>
                <fullName>Rebless_Baseline</fullName>
                <label>Rebless Baseline</label>
            </value>
            <value>
                <fullName>Update_Golden_Set</fullName>
                <label>Update Golden Set</label>
            </value>
            <value>
                <fullName>Notify_Only</fullName>
                <default>true</default>
                <label>Notify Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>