force-app/main/default/objects/Remediation__c/fields/After_State__c.field-meta.xml
<CustomField>
    <fullName>After_State__c</fullName>
    <description>JSON snapshot of the agent state after the remediation executes.</description>
    <label>After State</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>