force-app/main/default/objects/Remediation__c/fields/Approval_State__c.field-meta.xml
<CustomField>
    <fullName>Approval_State__c</fullName>
    <description>Approval lifecycle of this remediation.</description>
    <label>Approval State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>