force-app/main/default/objects/Remediation__c/fields/Approved_At__c.field-meta.xml
<CustomField>
    <fullName>Approved_At__c</fullName>
    <description>Timestamp of the approval decision.</description>
    <label>Approved At</label>
    <type>DateTime</type>
</CustomField>