force-app/main/default/objects/Remediation__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <description>User who approved or rejected this remediation.</description>
    <label>Approver</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Remediations Approved</relationshipLabel>
    <relationshipName>RemediationsApproved</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>