force-app/main/default/objects/Remediation__c/fields/Before_State__c.field-meta.xml
<CustomField>
    <fullName>Before_State__c</fullName>
    <description>JSON snapshot of the agent state before the remediation executes.</description>
    <label>Before State</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>