force-app/main/default/objects/Remediation__c/fields/Deviation_Finding__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Finding__c</fullName>
    <description>Parent finding this remediation acts on.</description>
    <label>Deviation Finding</label>
    <type>MasterDetail</type>
    <referenceTo>Deviation_Finding__c</referenceTo>
    <relationshipLabel>Remediations</relationshipLabel>
    <relationshipName>Remediations</relationshipName>
</CustomField>