force-app/main/default/objects/Remediation__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Error message captured when execution fails.</description>
    <label>Error</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>