force-app/main/default/objects/Remediation__c/fields/Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Key__c</fullName>
    <description>External Id guaranteeing execute() runs at most once per logical remediation.</description>
    <label>Idempotency Key</label>
    <type>Text</type>
    <length>128</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>