force-app/main/default/objects/Remediation__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <description>User who proposed this remediation.</description>
    <label>Requested By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Remediations Requested</relationshipLabel>
    <relationshipName>RemediationsRequested</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>